chore: npm audit fix update (#322)
* style: link color updates

Some to meet AA!

* fix: footer credit links in light mode

* fix: nav item active state

* fix: vertical overflow on main nav

* style: couple of post footer tag nav tweaks

* fix: mobile main navigation overflow scrolling

* fix: syntax error in an article

* chore(deps): bump rollup version

* style: post note spacing following a code block

* fix: wrap inline code examples

Fixes #302 doesn't look ideal, but better that cut off examples

* chore: running some linting

* chore: stylelint run

* chore: npm audit fix security update

--- a/src/scss/components/_syntax-highlighting.scss
+++ b/src/scss/components/_syntax-highlighting.scss
@@ -6,51 +6,49 @@
 
 code[class*='language-'],
 pre[class*='language-'] {
-    color: #f8f8f2;
-    background: none;
-    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-    text-align: left;
-    /*
+	background: none;
+	color: #f8f8f2;
+	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
+	line-height: 1.5;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
+	text-align: left;
+
+	/*
   this suggestion provided by Chris Coyier on CSS-Tricks:
   https://css-tricks.com/snippets/css/make-pre-text-wrap/
   */
-    white-space: pre-wrap; /* css-3 */
-    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
-    white-space: -pre-wrap; /* Opera 4-6 */
-    white-space: -o-pre-wrap; /* Opera 7 */
-    word-wrap: break-word; /* Internet Explorer 5.5+ */
-
-    word-spacing: normal;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 1.5;
-
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
-
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
+	white-space: pre-wrap; /* css-3 */
+	white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-break: normal;
+	word-spacing: normal;
+	word-wrap: break-word; /* Internet Explorer 5.5+ */
+	word-wrap: normal;
 }
 
 /* Inline code */
 :not(pre) > code[class*='language-'] {
-    padding: 0.1em;
-    border-radius: 0.3em;
-    white-space: normal;
+	border-radius: .3em;
+	padding: .1em;
+	white-space: normal;
 }
 
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-    color: #d4d0ab;
+	color: #d4d0ab;
 }
 
 .token.punctuation {
-    color: #fefefe;
+	color: #fefefe;
 }
 
 .token.property,
@@ -58,12 +56,12 @@ pre[class*='language-'] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-    color: #ffa07a;
+	color: #ffa07a;
 }
 
 .token.boolean,
 .token.number {
-    color: #00e0e0;
+	color: #00e0e0;
 }
 
 .token.selector,
@@ -72,7 +70,7 @@ pre[class*='language-'] {
 .token.char,
 .token.builtin,
 .token.inserted {
-    color: #abe338;
+	color: #abe338;
 }
 
 .token.operator,
@@ -81,76 +79,77 @@ pre[class*='language-'] {
 .language-css .token.string,
 .style .token.string,
 .token.variable {
-    color: #00e0e0;
+	color: #00e0e0;
 }
 
 .token.atrule,
 .token.attr-value,
 .token.function {
-    color: #ffd700;
+	color: #ffd700;
 }
 
 .token.keyword {
-    color: #00e0e0;
+	color: #00e0e0;
 }
 
 .token.regex,
 .token.important {
-    color: #ffd700;
+	color: #ffd700;
 }
 
 .token.important,
 .token.bold {
-    font-weight: bold;
+	font-weight: bold;
 }
+
 .token.italic {
-    font-style: italic;
+	font-style: italic;
 }
 
 .token.entity {
-    cursor: help;
+	cursor: help;
 }
 
 @media screen and (-ms-high-contrast: active) {
-    code[class*='language-'],
-    pre[class*='language-'] {
-        color: windowText;
-        background: window;
-    }
+	code[class*='language-'],
+	pre[class*='language-'] {
+		background: window;
+		color: windowText;
+	}
 
-    :not(pre) > code[class*='language-'],
-    pre[class*='language-'] {
-        background: window;
-    }
+	:not(pre) > code[class*='language-'],
+	pre[class*='language-'] {
+		background: window;
+	}
 
-    .token.important {
-        background: highlight;
-        color: window;
-        font-weight: normal;
-    }
+	.token.important {
+		background: highlight;
+		color: window;
+		font-weight: normal;
+	}
 
-    .token.atrule,
-    .token.attr-value,
-    .token.function,
-    .token.keyword,
-    .token.operator,
-    .token.selector {
-        font-weight: bold;
-    }
+	.token.atrule,
+	.token.attr-value,
+	.token.function,
+	.token.keyword,
+	.token.operator,
+	.token.selector {
+		font-weight: bold;
+	}
 
-    .token.attr-value,
-    .token.comment,
-    .token.doctype,
-    .token.function,
-    .token.keyword,
-    .token.operator,
-    .token.property,
-    .token.string {
-        color: highlight;
-    }
+	.token.attr-value,
+	.token.comment,
+	.token.doctype,
+	.token.function,
+	.token.keyword,
+	.token.operator,
+	.token.property,
+	.token.string {
+		color: highlight;
+	}
 
-    .token.attr-value,
-    .token.url {
-        font-weight: normal;
-    }
+	.token.attr-value,
+	.token.url {
+		font-weight: normal;
+	}
 }
